--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
 </head>
 
-<body class="text-light" style="background-color: black; font-family: 'Poppins', sans-serif;;">
+<body class="text-light" style="background-color: black; font-family: 'Poppins', sans-serif;">
 
-    <div class="container-fluid banner">
+    <div class="container-fluid banner" style="max-width: 2000px;">
 
         <nav class="navbar navbar-expand-lg navbar-dark" style="margin: 0px;">
             <div class="container-fluid">
