--- a/members.html
+++ b/members.html
@@ -33,7 +33,7 @@
 
 <body class="text-light" style="background-color: black; font-family: 'Poppins', sans-serif;">
 
-    <div class="container-fluid banner" style="max-width: 2000px;">
+    <div class="container-fluid" style="max-width: 2000px;">
 
         <nav class="navbar navbar-expand-lg navbar-dark" style="margin: 0px;">
             <div class="container-fluid">
@@ -53,11 +53,12 @@
                     </ul>
                     <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                         <li class="nav-item" style="margin-right: 50px; font-size: 20px;">
-                            <a class="nav-link active glow hover-up" aria-current="page" href="index.html"
-                                style="font-size: 20px; text-underline-offset: 10px"><u>Home</u></a>
+                            <a class="nav-link active" aria-current="page" href="index.html"
+                                style="font-size: 20px;">Home</a>
                         </li>
-                        <li class="nav-item hover-up" style="margin-right: 50px; font-size: 20px;">
-                            <a class="nav-link active" aria-current="page" href="members.html">Members</a>
+                        <li class="nav-item hover-up glow"
+                            style="margin-right: 50px; font-size: 20px; text-underline-offset: 10px">
+                            <a class="nav-link active" aria-current="page" href="#"><u>Members</u></a>
                         </li>
                         <li class="nav-item hover-up" style="margin-right: 100px; font-size: 20px;">
                             <a class="nav-link active" aria-current="page" href="blogs.html">Blogs</a>
@@ -69,10 +70,10 @@
             </div>
         </nav>
 
-        <div class="container" style="text-align: center; margin-top: 10%;">
-            <h1 class="glow" style="font-family: 'Orbitron', sans-serif; font-size: 13.83vh;">Decrypt</h1>
+        <div class="container" style="text-align: center; margin-top: 5%;">
+            <i class="fas fa-exclamation-triangle" style="color: #8854C8; font-size: 25vh;"></i>
             <br><br><br><br>
-            <i class="fas fa-arrow-circle-down hover-down" style="color: #8854C8; font-size: 25vh;"></i>
+            <h1 class="glow" style="font-family: 'Orbitron', sans-serif; font-size: 5vh;">Under<br>Development</h1>
         </div>
 
     </div>
