--- a/blogs.html
+++ b/blogs.html
@@ -5,6 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:title" content="Decrypt">
+    <meta property="og:description" content="CSI RAIT Decrypt 2021-22">
+    <meta property="og:image" content="https://i.imgur.com/ec2euE5.png">
+    <meta property="og:url" content="https://kaustubh0204.github.io/Decrypt/">
+    
     <title>Decrypt | Home</title>
     <link rel="icon" href="assets/logo.png" type="image/x-icon">
 
