--- a/blogs.html
+++ b/blogs.html
@@ -10,7 +10,7 @@
     <meta property="og:image" content="https://i.imgur.com/ec2euE5.png">
     <meta property="og:url" content="https://kaustubh0204.github.io/Decrypt/">
     
-    <title>Decrypt | Home</title>
+    <title>Decrypt | Blogs</title>
     <link rel="icon" href="assets/logo.png" type="image/x-icon">
 
     <!--Bootstrap-->
