--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         </nav>
 
         <div class="container" style="text-align: center; margin-top: 10%;">
-            <h1 class="glow" style="font-family: 'Orbitron', sans-serif; font-size: 13.83vh;">Decrypt</h1>
+            <h1 class="glow" style="font-family: 'Orbitron', sans-serif; font-size: 8vw;">Decrypt</h1>
             <br><br><br><br>
             <i class="fas fa-arrow-circle-down hover-down" style="color: #8854C8; font-size: 25vh;"></i>
         </div>
