--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark" style="margin: 0px;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="assets/logo.png" alt="" width="100" height="100" class="d-inline-block align-text-top">
+                    <img src="assets/logo.png" alt="Decrypt" style="height: 6.688vw; width: 6.688vw;" class="d-inline-block align-text-top">
 
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -75,9 +75,9 @@
         </nav>
 
         <div class="container" style="text-align: center; margin-top: 10%;">
-            <h1 class="glow" style="font-family: 'Orbitron', sans-serif; font-size: 13.83vh;">Decrypt</h1>
+            <h1 class="glow" style="font-family: 'Orbitron', sans-serif; font-size: 6.688vw;">Decrypt</h1>
             <br><br><br><br>
-            <i class="fas fa-arrow-circle-down hover-down" style="color: #8854C8; font-size: 25vh;"></i>
+            <i class="fas fa-arrow-circle-down hover-down" style="color: #8854C8; font-size: 12.04vw;"></i>
         </div>
 
     </div>
