'what is decrypt' diva added

--- a/index.html
+++ b/index.html
@@ -38,12 +38,16 @@
 
 <body class="text-light" style="background-color: black; font-family: 'Poppins', sans-serif;">
 
+    <img src="assets/whatsapp_icon.png" class="hover-up" alt="whatsapp"
+        style="position: fixed; bottom: 8%; right: 3%; z-index: 1; color: #8854C8; height: 70px; width: 70px; cursor: pointer;">
+
     <div class="container-fluid banner" style="max-width: 2000px;">
 
         <nav class="navbar navbar-expand-lg navbar-dark" style="margin: 0px;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="assets/logo.png" alt="Decrypt" style="height: 6.688vw; width: 6.688vw;" class="d-inline-block align-text-top">
+                    <img src="assets/logo.png" alt="Decrypt" style="height: 6.688vw; width: 6.688vw;"
+                        class="d-inline-block align-text-top">
 
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
@@ -76,9 +80,31 @@
 
         <div class="container" style="text-align: center; margin-top: 10%;">
             <h1 class="glow" style="font-family: 'Orbitron', sans-serif; font-size: 6.688vw;">Decrypt</h1>
-            <br><br><br><br>
+            <br><br><br><br><br>
             <i class="fas fa-arrow-circle-down hover-down" style="color: #8854C8; font-size: 12.04vw;"></i>
         </div>
+        <br><br><br><br><br><br>
+    </div>
+
+    <div class="container-fluid banner2" style="padding: 20px;">
+
+        <div class="row">
+            <div class="col-6" style="margin-top: 10%;">
+                <h1 style="font-size: 10.033vw;">what is<br>decrypt?</h1>
+            </div>
+            <div class="col-6" style="margin-top: 10%;">
+                <p style="font-size: 18px; text-align: right;">
+                    <span style="color: #8854C8;">Lorem Ipsum</span> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the<br>
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type<br>
+                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the<br>
+                    leap into electronic <span style="color: #8854C8;">typesetting</span>, remaining essentially unchanged. It was popularised in the 1960s<br>
+                    with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop<br>
+                    publishing software like <span style="color: #8854C8;">Aldus PageMaker</span> including versions of Lorem Ipsum.
+                </p>
+            </div>
+        </div>
+
+
 
     </div>
 
