--- a/members.html
+++ b/members.html
@@ -57,7 +57,7 @@
 
                     </ul>
                     <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-                        <li class="nav-item" style="margin-right: 50px; font-size: 20px;">
+                        <li class="nav-item hover-up" style="margin-right: 50px; font-size: 20px;">
                             <a class="nav-link active" aria-current="page" href="index.html"
                                 style="font-size: 20px;">Home</a>
                         </li>
