--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 
         <div class="container" style="text-align: center; margin-top: 10%;">
             <h1 class="glow" style="font-family: 'Orbitron', sans-serif; font-size: 6.688vw;">Decrypt</h1>
-            <br><br><br><br><br>
+            <div style="height: 70px;"></div>
             <i class="fas fa-arrow-circle-down hover-down" style="color: #8854C8; font-size: 12.04vw;"></i>
+            <div style="height: 200px;"></div>
         </div>
-        <br><br><br><br><br><br>
     </div>
 
     <div class="container-fluid banner2" style="padding: 20px;">
@@ -93,13 +93,15 @@
                 <h1 style="font-size: 10.033vw;">what is<br>decrypt?</h1>
             </div>
             <div class="col-6" style="margin-top: 10%;">
-                <p style="font-size: 18px; text-align: right;">
+                <p style="font-size: 18px; text-align: justify;">
                     <span style="color: #8854C8;">Lorem Ipsum</span> is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the<br>
                     industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type<br>
                     and scrambled it to make a type specimen book. It has survived not only five centuries, but also the<br>
                     leap into electronic <span style="color: #8854C8;">typesetting</span>, remaining essentially unchanged. It was popularised in the 1960s<br>
                     with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop<br>
-                    publishing software like <span style="color: #8854C8;">Aldus PageMaker</span> including versions of Lorem Ipsum.
+                    publishing software like <span style="color: #8854C8;">Aldus PageMaker</span> including versions of Lorem Ipsum.<br>
+                    with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop.
+
                 </p>
             </div>
         </div>
