--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
 <body class="text-light" style="background-color: black; font-family: 'Poppins', sans-serif;">
 
-    <img src="assets/whatsapp_icon.png" class="hover-up" alt="whatsapp"
-        style="position: fixed; bottom: 8%; right: 3%; z-index: 1; color: #8854C8; height: 70px; width: 70px; cursor: pointer;">
+  <a  target="_blank" href="https://wa.me/+917066695395?text=I%20am%20interested%20"><img src="assets/whatsapp_icon.png" class="hover-up" alt="whatsapp"
+        style="position: fixed; bottom: 8%; right: 3%; z-index: 1; color: #8854C8; height: 70px; width: 70px;"></a>  
 
     <div class="container-fluid banner" style="max-width: 2000px;">
 
