PDF viewer integration (cozine), contact us added (all pages).

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:url" content="https://kaustubh0204.github.io/Decrypt/">
 
     <title>Decrypt | Home</title>
-    <link rel="icon" href="assets/logo.png" type="image/x-icon">
+    <link rel="icon" href="assets/decrypt-logo.png" type="image/x-icon">
 
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -34,19 +34,28 @@
     <!--Custom CSS-->
     <link href="styles.css" rel="stylesheet">
 
+    <!--Mapbox-->
+    <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.js"></script>
+    <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v2.4.1/mapbox-gl.css" rel="stylesheet" />
+
+
 </head>
 
 <body class="text-light" style="background-color: black; font-family: 'Poppins', sans-serif;">
 
-  <a  target="_blank" href="https://wa.me/+917066695395?text=I%20am%20interested%20"><img src="assets/whatsapp_icon.png" class="hover-up" alt="whatsapp"
-        style="position: fixed; bottom: 8%; right: 3%; z-index: 1; color: #8854C8; height: 70px; width: 70px;"></a>  
+    <!--Whatsapp button-->
+    <a target="_blank" href="https://wa.me/+917066695395?text=I%20am%20interested%20"><img
+            src="assets/whatsapp_icon.png" class="hover-up" alt="whatsapp"
+            style="position: fixed; bottom: 8%; right: 3%; z-index: 1; color: #8854C8; height: 70px; width: 70px;">
+    </a>
 
+    <!--Main banner + nav-bar-->
     <div class="container-fluid banner" style="max-width: 2000px;">
 
         <nav class="navbar navbar-expand-lg navbar-dark" style="margin: 0px;">
             <div class="container-fluid">
                 <a class="navbar-brand" href="index.html">
-                    <img src="assets/logo.png" alt="Decrypt" style="height: 6.688vw; width: 6.688vw;"
+                    <img src="assets/decrypt-logo.png" alt="Decrypt" style="height: 100px; width: 100px"
                         class="d-inline-block align-text-top">
 
                 </a>
@@ -78,6 +87,7 @@
             </div>
         </nav>
 
+        <!--Hot 3-->
         <div class="container" style="text-align: center; margin-top: 10%;">
             <h1 class="glow" style="font-family: 'Orbitron', sans-serif; font-size: 6.688vw;">Decrypt</h1>
             <div style="height: 70px;"></div>
@@ -234,21 +244,176 @@
         <br>
         <br>
 
+
         <div class="card text-center container bg-dark" style="max-width: 500px; color: white; border-radius: 2vw;">
             <div class="card-header">
-              <h1>Hola!</h1>
+                <h1>Hola!</h1>
             </div>
             <div class="card-body bg-dark" style="border-radius: 2vw;">
-              <h2 class="card-title" style="color: #8854C8;">Want to see more?</h2><br>
-              <p class="card-text" style="font-size: 13px;">Visit our blogs page to go through entire <br>archive of amazing technical articles.</p><br>
-              <a href="blogs.html" class="btn btn-lg hover-up" style="background-color: #8854C8; font-weight: 700;">See more</a>
+                <h2 class="card-title" style="color: #8854C8;">Want to see more?</h2><br>
+                <p class="card-text" style="font-size: 13px;">Visit our blogs page to go through entire <br>archive of
+                    amazing technical articles.</p><br>
+                <a href="blogs.html" class="btn btn-lg hover-up"
+                    style="background-color: #8854C8; font-weight: 700;">See more</a>
             </div>
-           
-          </div>
+
+        </div>
 
 
         <br>
     </div>
+
+    <div style="height: 300px;"></div>
+
+    <!--Cozine-->
+    <h1 style="font-size: 10.033vw; text-align: center;"><i class="fas fa-book-open" style="color:#8854C8"></i> Cozine
+        2021</h1>
+    <hr>
+    <br>
+    <div class="container-fluid" style="padding: 0px;">
+
+        <iframe class="container-fluid" style="margin: 0px; padding: 0px;"
+            src="https://online.anyflip.com/sught/vcns/index.html" sandboxscrolling="no" frameborder="0" width="700"
+            height="700" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true"
+            sandbox="allow-scripts"></iframe>
+
+    </div>
+
+    <div style="height: 300px;"></div>
+
+    <!--Footer-->
+    <div class="container-fluid">
+        <h1 style="font-size: 5vw; text-align: center;"><i class="fas fa-phone-alt" style="color:#8854C8"></i> Contact
+            us</h1>
+        <div style="height: 100px;"></div>
+        <div class="row">
+            <div class="col-3">
+                <div class="row">
+                    <div class="col-5">
+                        <a href="https://kaustubh0204.github.io/Decrypt/"><img src="assets/decrypt-logo.png"
+                                class="img-fluid"></a>
+                    </div>
+
+                    <div class="col-5">
+                        <a href="http://www.csirait.com"><img src="assets/csi-logo.png" class="img-fluid"></a>
+                    </div>
+                    <div class="col-2">
+                        <div style="height: 230px; border-left: 2px solid #8854C8;">
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-6">
+
+                <div class="row">
+                    <div class="col-6">
+                        <h2 style="color: #8854C8;"><i class="fas fa-map-marker-alt"></i> &nbspAddress</h2>
+                        <br>
+                        <p style="font-size: 20px;">
+                            3rd Floor,<br>
+                            CSI Room,<br>
+                            Ramrao Adik Institute Of Technology<br>
+                            (RAIT),<br>
+                            Nerul, Navi Mumbai. &nbsp&nbsp<a style="text-decoration: none;" class="socialmedia"
+                                target="_blank"
+                                href="https://www.google.com/maps/place/Ramrao+Adik+Institute+of+Technology/@19.0443898,73.0235066,17z/data=!3m1!4b1!4m5!3m4!1s0x3be7c3db00160053:0x95e9ca007676b993!8m2!3d19.0443847!4d73.0257006"><i
+                                    class="fas fa-external-link-alt"></i></a><br>
+                        </p>
+                    </div>
+                    <div class="col-6" id="map" style="border-radius: 1vw;">
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-3">
+
+                <div class="row">
+                    <div class="col-2">
+                        <div style="height: 230px; border-left: 2px solid #8854C8; margin-left: 2.67558vw;">
+
+                        </div>
+                    </div>
+                    <div class="col-1">
+
+                    </div>
+                    <div class="col-9">
+
+                        <h2 style="color: #8854C8;"><i class="fas fa-share-alt"></i> &nbspSocial Media</h2>
+                        <br>
+                        <a style="text-decoration: none; font-size: 20px;" href="https://github.com/csi-rait"
+                            target="_blank" class="socialmedia hover-up"><i class="fab fa-github"></i>
+                            &nbspGithub</a><br><br>
+                        <a style="text-decoration: none; font-size: 20px;" href="https://www.linkedin.com/in/csi-rait/"
+                            target="_blank" class="socialmedia hover-up"><i class="fab fa-linkedin-in"></i> &nbspLinked
+                            In</a><br><br>
+                        <a style="text-decoration: none; font-size: 20px;" href="https://www.instagram.com/csi.rait/"
+                            target="_blank" class="socialmedia hover-up"><i class="fab fa-instagram"></i>
+                            &nbspInstagram</a><br><br>
+                        <a style="text-decoration: none; font-size: 20px;"
+                            href="https://www.facebook.com/csirait.official/" target="_blank" class="socialmedia"><i
+                                class="fab fa-facebook"></i> &nbspFacebook</a><br><br>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+        <div style="height: 100px;"></div>
+        <div class="container-fluid bg-dark text-muted" style="height: 30px; padding: 3px;">
+            <p style="text-align: center; font-size: 15px;"><i class="far fa-copyright" style="color: #8854C8;"></i>
+                Copyright 2021</p>
+        </div>
+
+        <style>
+            .marker {
+                background-image: url('assets/csi-logo.png');
+                background-size: cover;
+                width: 50px;
+                height: 50px;
+                border-radius: 50%;
+                cursor: pointer;
+            }
+
+            .mapboxgl-popup-content {
+                font-family: 'Poppins', sans-serif;
+                border-style: solid;
+                border-radius: 1vw;
+                border-color: #8854C8;
+                color: white;
+                background-color: #1D1D26;
+            }
+
+            .mapboxgl-popup-close-button {
+                color: #8854C8;
+            }
+
+            .mapboxgl-popup-anchor-top .mapboxgl-popup-tip,
+            .mapboxgl-popup-anchor-top-left .mapboxgl-popup-tip,
+            .mapboxgl-popup-anchor-top-right .mapboxgl-popup-tip {
+                border-bottom-color: #8854C8;
+            }
+
+            .mapboxgl-popup-anchor-bottom .mapboxgl-popup-tip,
+            .mapboxgl-popup-anchor-bottom-left .mapboxgl-popup-tip,
+            .mapboxgl-popup-anchor-bottom-right .mapboxgl-popup-tip {
+                border-top-color: #8854C8
+            }
+
+            .mapboxgl-popup-anchor-left .mapboxgl-popup-tip {
+                border-right-color: #8854C8
+            }
+
+            .mapboxgl-popup-anchor-right .mapboxgl-popup-tip {
+                border-left-color: #8854C8
+            }
+        </style>
+    </div>
+
+    <!--Custom JS-->
+    <script src="script.js"></script>
 
 </body>
 
