Tabs added in members page.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
         </nav>
 
-        <!--Hot 3-->
+        
         <div class="container" style="text-align: center; margin-top: 10%;">
             <h1 class="glow" style="font-family: 'Orbitron', sans-serif; font-size: 6.688vw;">Decrypt</h1>
             <div style="height: 70px;"></div>
@@ -97,6 +97,7 @@
         </div>
     </div>
 
+    <!--'What is Decrypt?' section-->
     <div class="container-fluid banner2" style="padding: 20px;">
 
         <div class="row">
@@ -129,6 +130,7 @@
 
     <br>
 
+    <!--Hot 3-->
     <div class="container-fluid" style="background: black;" id="hot3">
 
         <h1 style="font-size: 10.033vw; text-align: center;"><i class="fas fa-fire" style="color:#8854C8"></i> Hot 3
@@ -367,6 +369,7 @@
                 Copyright 2021</p>
         </div>
 
+        <!--Mapbox marker & popup styling-->
         <style>
             .marker {
                 background-image: url('assets/csi-logo.png');
