--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@
                         <h2 class="card-title" style="color: #8854C8;">Want to see more?</h2><br>
                         <p class="card-text" style="font-size: 13px;">Visit our blogs page to go through entire
                             <br>archive of
-                            amazing technical articles.</p><br>
+                            amazing technical articles.
+                        </p><br>
                         <a href="blogs.html" class="btn btn-lg hover-up"
                             style="background-color: #8854C8; font-weight: 700;">See more</a>
                     </div>
@@ -497,6 +498,41 @@
                             style="color: #8854C8; font-size: 150px;"></i></a>
                     <div style="height: 200px;"></div>
                 </div>
+            </div>
+
+            <!--'What is Decrypt?' section-->
+            <div class="container-fluid banner4" style="padding: 20px;">
+
+                <div class="row">
+                    <div class="col-12" style="margin-top: 10%;">
+                        <h2 style="font-size: 10.033vw; text-align: center;">what is decrypt?</h2>
+                    </div>
+                    <div class="col-12" style="margin-top: 10%;">
+                        <p style="font-size: 18px; text-align: justify;">
+                            <span style="color: #8854C8;">Lorem Ipsum</span> is simply dummy text of the printing and
+                            typesetting industry. Lorem Ipsum has been the<br>
+                            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
+                            of
+                            type<br>
+                            and scrambled it to make a type specimen book. It has survived not only five centuries, but
+                            also
+                            the<br>
+                            leap into electronic <span style="color: #8854C8;">typesetting</span>, remaining essentially
+                            unchanged. It was popularised in the 1960s<br>
+                            with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
+                            desktop<br>
+                            publishing software like <span style="color: #8854C8;">Aldus PageMaker</span> including
+                            versions of
+                            Lorem Ipsum.<br>
+                            with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with
+                            desktop.
+
+                        </p>
+                    </div>
+                </div>
+
+                <div style="height: 500px;"></div>
+
             </div>
 
 
