--- a/index.html
+++ b/index.html
@@ -531,8 +531,161 @@
                     </div>
                 </div>
 
-                <div style="height: 200px;"></div>
+                <div style="height: 100px;"></div>
 
+            </div>
+
+            
+            <br>
+            <br>
+            <!--Hot 3-->
+            <div class="container-fluid" style="background: black;" id="hot3">
+
+                <h1 style="font-size: 10.033vw; text-align: center;"><i class="fas fa-fire" style="color:#8854C8"></i>
+                    Hot 3
+                </h1>
+                <hr>
+                <br>
+
+                <div class="card mb-3 container hover-up" onclick="location.href='blogs.html';"
+                    style="background-color: black; max-width: 500px; padding: 0px; border-radius: 1vw; border-color: #8854C8; cursor: pointer;">
+                    <img src="assets/datascience.jpg"
+                        style="max-width: 500px; max-height: 300px; border-top-left-radius: 1vw; border-top-right-radius: 1vw;"
+                        class="card-img-top" alt="Data Science">
+                    <div class="card-body">
+                        <br>
+                        <h5 class="card-title" style="font-size: 20px; color: #8854C8; font-weight: 700;">7 Reasons why
+                            you
+                            need
+                            a data integration strategy</h5>
+                        <hr style="background-color:#8854C8; height: 0.1px; width: 70%; opacity: 100%;">
+                        <p class="card-text" style="font-size: 14px;">Data integration is defined as gathering data from
+                            multiple sources to create a
+                            unified view. The process of the consolidated data avails users with consistent access to
+                            their
+                            data
+                            on a self-service basis.
+                        </p>
+                        <div class="row">
+                            <div class="col-6">
+                                <p class="card-text" style="margin-top: 5%;"><small class="text-muted">Last updated 3
+                                        hours
+                                        ago</small></p>
+                            </div>
+                            <div class="col-5" style="margin-top: 1%;">
+                                <p align="right" class="text-muted" style="margin-right: 10px;">Kaustubh Utturwar<br> Co EIC Decrypt</p>
+
+                            </div>
+                            <div class="col-1">
+                                <img src="assets/kaustubh.jpg"
+                                    style="border-radius: 50%; height: 40px; width: 40px; border-style: solid; border-color:#8854C8; border-width: 1px;"
+                                    align="right">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <br>
+                <br>
+
+                <div class="card mb-3 container hover-up" onclick="location.href='blogs.html';"
+                    style="background-color: black; max-width: 700px; padding: 0px; border-radius: 1vw; border-color: #8854C8; cursor: pointer;">
+                    <img src="assets/artificialintelligence.jpg"
+                        style="max-width: 700px; max-height: 300px; border-top-left-radius: 1vw; border-top-right-radius: 1vw;"
+                        class="card-img-top" alt="Data Science">
+                    <div class="card-body">
+                        <br>
+                        <h5 class="card-title" style="font-size: 20px; color: #8854C8; font-weight: 700;">Mercedes
+                            Dashboard
+                            with AI</h5>
+                        <hr style="background-color:#8854C8; height: 0.1px; width: 70%; opacity: 100%;">
+                        <p class="card-text" style="font-size: 14px;">Mercedes Benz aims to impress with their new EQS
+                            dashboard
+                            that sports a full-width display for the driver and the passenger combined. AI is used to
+                            adapt the
+                            dashboard content based on context and user requirements.
+                        </p>
+                        <div class="row">
+                            <div class="col-6">
+                                <p class="card-text" style="margin-top: 5%;"><small class="text-muted">Last updated 2
+                                        days
+                                        ago</small></p>
+                            </div>
+                            <div class="col-5" style="margin-top: 1%;">
+                                <p align="right" class="text-muted">Darshan Rao<br> Co EIC Cozine</p>
+
+                            </div>
+                            <div class="col-1">
+                                <img src="assets/darshan.png"
+                                    style="border-radius: 50%; height: 40px; width: 40px; border-style: solid; border-color:#8854C8; border-width: 1px;"
+                                    align="right">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <br>
+                <br>
+
+                <div class="card mb-3 container hover-up" onclick="location.href='blogs.html';"
+                    style="background-color: black; max-width: 700px; padding: 0px; border-radius: 1vw; border-color: #8854C8; cursor: pointer;">
+                    <img src="assets/iot.jpg"
+                        style="max-width: 700px; max-height: 300px; border-top-left-radius: 1vw; border-top-right-radius: 1vw;"
+                        class="card-img-top" alt="Data Science">
+                    <div class="card-body">
+                        <br>
+                        <h5 class="card-title" style="font-size: 20px; color: #8854C8; font-weight: 700;">How IoT
+                            security
+                            translates from buzzword to opportunity</h5>
+                        <hr style="background-color:#8854C8; height: 0.1px; width: 70%; opacity: 100%;">
+                        <p class="card-text" style="font-size: 14px;">More and more companies looking for turnkey
+                            managed
+                            solutions for their IoT technologies, to not only secure their applications but also comply
+                            with
+                            data security regulations, says Adam Weinberg, co-founder & CTO, FirstPoint Mobile Guard.
+                        </p>
+                        <div class="row">
+                            <div class="col-6">
+                                <p class="card-text" style="margin-top: 5%;"><small class="text-muted">Last updated 1
+                                        week
+                                        ago</small></p>
+                            </div>
+                            <div class="col-5" style="margin-top: 1%;">
+                                <p align="right" class="text-muted">Kaustubh Utturwar<br> Co EIC Decrypt</p>
+
+                            </div>
+                            <div class="col-1">
+                                <img src="assets/kaustubh.jpg"
+                                    style="border-radius: 50%; height: 40px; width: 40px; border-style: solid; border-color:#8854C8; border-width: 1px;"
+                                    align="right">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <br>
+                <br>
+
+
+                <div class="card text-center container bg-dark"
+                    style="max-width: 500px; color: white; border-radius: 2vw;">
+                    <div class="card-header">
+                        <h1>Hola!</h1>
+                    </div>
+                    <div class="card-body bg-dark" style="border-radius: 2vw;">
+                        <h2 class="card-title" style="color: #8854C8;">Want to see more?</h2><br>
+                        <p class="card-text" style="font-size: 13px;">Visit our blogs page to go through entire
+                            <br>archive of
+                            amazing technical articles.
+                        </p><br>
+                        <a href="blogs.html" class="btn btn-lg hover-up"
+                            style="background-color: #8854C8; font-weight: 700;">See more</a>
+                    </div>
+
+                </div>
+
+
+                <br>
             </div>
 
 
