--- a/index.html
+++ b/index.html
@@ -589,9 +589,9 @@
                 <br>
 
                 <div class="card mb-3 container hover-up" onclick="location.href='blogs.html';"
-                    style="background-color: black; max-width: 700px; padding: 0px; border-radius: 1vw; border-color: #8854C8; cursor: pointer;">
+                    style="background-color: black; max-width: 500px; padding: 0px; border-radius: 1vw; border-color: #8854C8; cursor: pointer;">
                     <img src="assets/artificialintelligence.jpg"
-                        style="max-width: 700px; max-height: 300px; border-top-left-radius: 1vw; border-top-right-radius: 1vw;"
+                        style="max-width: 500px; max-height: 300px; border-top-left-radius: 1vw; border-top-right-radius: 1vw;"
                         class="card-img-top" alt="Data Science">
                     <div class="card-body">
                         <br>
@@ -612,7 +612,7 @@
                                         ago</small></p>
                             </div>
                             <div class="col-5" style="margin-top: 1%;">
-                                <p align="right" class="text-muted">Darshan Rao<br> Co EIC Cozine</p>
+                                <p align="right" class="text-muted" style="margin-right: 20px;">Darshan Rao<br> Co EIC Cozine</p>
 
                             </div>
                             <div class="col-1">
@@ -628,9 +628,9 @@
                 <br>
 
                 <div class="card mb-3 container hover-up" onclick="location.href='blogs.html';"
-                    style="background-color: black; max-width: 700px; padding: 0px; border-radius: 1vw; border-color: #8854C8; cursor: pointer;">
+                    style="background-color: black; max-width: 500px; padding: 0px; border-radius: 1vw; border-color: #8854C8; cursor: pointer;">
                     <img src="assets/iot.jpg"
-                        style="max-width: 700px; max-height: 300px; border-top-left-radius: 1vw; border-top-right-radius: 1vw;"
+                        style="max-width: 500px; max-height: 300px; border-top-left-radius: 1vw; border-top-right-radius: 1vw;"
                         class="card-img-top" alt="Data Science">
                     <div class="card-body">
                         <br>
@@ -651,7 +651,7 @@
                                         ago</small></p>
                             </div>
                             <div class="col-5" style="margin-top: 1%;">
-                                <p align="right" class="text-muted">Kaustubh Utturwar<br> Co EIC Decrypt</p>
+                                <p align="right" class="text-muted" style="margin-right: 20px;">Kaustubh Utturwar<br> Co EIC Decrypt</p>
 
                             </div>
                             <div class="col-1">
@@ -668,11 +668,12 @@
 
 
                 <div class="card text-center container bg-dark"
-                    style="max-width: 500px; color: white; border-radius: 2vw;">
+                    style="max-width: 400px; color: white; border-radius: 50px;">
                     <div class="card-header">
+                        <br>
                         <h1>Hola!</h1>
                     </div>
-                    <div class="card-body bg-dark" style="border-radius: 2vw;">
+                    <div class="card-body bg-dark" style="border-radius: 50px;">
                         <h2 class="card-title" style="color: #8854C8;">Want to see more?</h2><br>
                         <p class="card-text" style="font-size: 13px;">Visit our blogs page to go through entire
                             <br>archive of
