--- a/index.html
+++ b/index.html
@@ -690,6 +690,26 @@
             </div>
 
 
+            <div style="height: 200px;"></div>
+
+            <!--Cozine-->
+            <h1 style="font-size: 10.033vw; text-align: center;"><i class="fas fa-book-open" style="color:#8854C8"></i>
+                Cozine
+                2021</h1>
+            <hr>
+            <br>
+            <div class="container-fluid" style="padding: 0px;">
+
+                <iframe class="container-fluid" style="margin: 0px; padding: 0px;"
+                    src="https://online.anyflip.com/sught/vcns/index.html" sandboxscrolling="no" frameborder="0"
+                    width="400" height="600" allowfullscreen="true" webkitallowfullscreen="true"
+                    mozallowfullscreen="true" sandbox="allow-scripts"></iframe>
+
+            </div>
+
+            <div style="height: 100px;"></div>
+
+
         </template>
     </cool-ad>
     <script>
