--- a/blogs.html
+++ b/blogs.html
@@ -239,13 +239,20 @@
 
         </template>
         <template class="ad__mobile" style="overflow: hidden;">
+
+             <!--Whatsapp button-->
+             <a target="_blank" href="https://wa.me/+917066695395?text=I%20am%20interested%20"><img
+                src="assets/whatsapp_icon.png" class="hover-up" alt="whatsapp"
+                style="position: fixed; bottom: 5%; right: 3%; z-index: 1; color: #8854C8; height: 50px; width: 50px;">
+        </a>
+
             <!--Main banner + nav-bar-->
             <div class="container-fluid" style="max-width: 2000px;">
 
                 <nav class="navbar navbar-expand-lg navbar-dark" style="margin: 0px;">
                     <div class="container-fluid">
                         <a class="navbar-brand" href="index.html">
-                            <img src="assets/decrypt-logo.png" alt="" width="100" height="100"
+                            <img src="assets/decrypt-logo.png" alt="Decrypt" style="height: 70px; width: 70px"
                                 class="d-inline-block align-text-top">
 
                         </a>
