--- a/blogs.html
+++ b/blogs.html
@@ -42,6 +42,10 @@
 
 <body class="text-light" style="background-color: black; font-family: 'Poppins', sans-serif;">
 
+
+    <!--DESKTOP-->
+
+
     <cool-ad>
         <template class="ad__desktop">
 
@@ -238,6 +242,13 @@
             </div>
 
         </template>
+
+
+
+        <!--MOBILE-->
+
+
+
         <template class="ad__mobile" style="overflow: hidden;">
 
              <!--Whatsapp button-->
