--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 <body class="text-light" style="background-color: black; font-family: 'Poppins', sans-serif; overflow-x: hidden;">
 
 
+
+    <!--DESKTOP-->
+
+
     <cool-ad>
         <template class="ad__desktop">
 
@@ -444,6 +448,11 @@
             </div>
 
         </template>
+
+
+        <!--MOBILE-->
+
+
         <template class="ad__mobile" style="overflow: hidden;">
 
             <!--Whatsapp button-->
