--- a/members.html
+++ b/members.html
@@ -47,6 +47,9 @@
     <cool-ad>
         <template class="ad__desktop">
 
+
+            <!--DESKTOP-->
+
             <!--Whatsapp button-->
             <a target="_blank" href="https://wa.me/+917066695395?text=I%20am%20interested%20"><img
                     src="assets/whatsapp_icon.png" class="hover-up" alt="whatsapp"
@@ -1499,6 +1502,12 @@
             </div>
 
         </template>
+
+
+
+        <!--MOBILE-->
+
+
         <template class="ad__mobile" style="overflow: hidden;">
 
             <!--Whatsapp button-->
