--- a/members.html
+++ b/members.html
@@ -755,7 +755,7 @@
                                 <div class="card-body">
                                     <div class="row">
                                         <div class="col-5">
-                                            <img src="assets/anuj.png"
+                                            <img src="assets/Capture.PNG"
                                                 style="height: 150px; width: 150px; border-radius: 1vw;">
                                         </div>
                                         <div class="col-7">
