--- a/index.html
+++ b/index.html
@@ -587,11 +587,36 @@
 
         <template class="ad__mobile" style="overflow: hidden;">
 
+
+
             <!--Whatsapp button-->
             <a target="_blank" href="https://wa.me/+917066695395?text=I%20am%20interested%20"><img
                     src="assets/whatsapp_icon.png" class="hover-up" alt="whatsapp"
                     style="position: fixed; bottom: 5%; right: 3%; z-index: 1; color: #8854C8; height: 50px; width: 50px;">
             </a>
+
+            <script>
+                $(document).ready(function () {
+                    $(window).scroll(function () {
+                        if ($(window).scrollTop() > 800) {
+                            $(".navbar").css({ "background-color": "black" });
+                            $(".logo").css({ "height": "40px" });
+                            $(".logo").css({ "width": "40px" });
+                            $(".logo2").css({ "height": "40px" });
+                            $(".logo2").css({ "width": "40px" });
+                        }
+                        else {
+                            $(".navbar").css({ "background-color": "" });
+                            $(".logo").css({ "height": "80px" });
+                            $(".logo").css({ "width": "80px" });
+                            $(".logo2").css({ "height": "0px" });
+                            $(".logo2").css({ "width": "0px" });
+                        }
+
+                    })
+                })
+            </script>
+
 
             <!--Main banner + nav-bar-->
             <div class="container-fluid banner" style="max-width: 2000px;">
@@ -655,7 +680,7 @@
 
                 <div class="row">
                     <div class="col-12" style="margin-top: 10%;">
-                        <h2 style="font-size: 10.033vw; text-align: center;">what is decrypt?</h2>
+                        <h2 style="font-size: 10.033vw; text-align: center;">What is decrypt?</h2>
                     </div>
                     <div class="col-12" style="margin-top: 10%;">
                         <p style="font-size: 18px; text-align: justify;">
@@ -719,7 +744,7 @@
                         </p>
                         <div class="row">
                             <div class="col-6">
-                                <p class="card-text" style="margin-top: 5%;"><small class="text-muted">Last updated 3
+                                <p class="card-text" style="margin-top: 5%;"><small class="text-muted">Last updated 4
                                         hours
                                         ago</small></p>
                             </div>
@@ -759,7 +784,7 @@
                         </p>
                         <div class="row">
                             <div class="col-6">
-                                <p class="card-text" style="margin-top: 5%;"><small class="text-muted">Last updated 2
+                                <p class="card-text" style="margin-top: 5%;"><small class="text-muted">Last updated 5
                                         days
                                         ago</small></p>
                             </div>
@@ -799,17 +824,57 @@
                         </p>
                         <div class="row">
                             <div class="col-6">
-                                <p class="card-text" style="margin-top: 5%;"><small class="text-muted">Last updated 1
-                                        week
+                                <p class="card-text" style="margin-top: 5%;"><small class="text-muted">Last updated 2
+                                        weeks
                                         ago</small></p>
                             </div>
                             <div class="col-5" style="margin-top: 1%;">
-                                <p align="right" class="text-muted" style="margin-right: 20px;">Kaustubh Utturwar<br> Co
+                                <p align="right" class="text-muted" style="margin-right: 20px;">Anuj Patil<br> Co
                                     EIC Decrypt</p>
 
                             </div>
                             <div class="col-1">
-                                <img src="assets/kaustubh.jpg"
+                                <img src="assets/anuj.png"
+                                    style="border-radius: 50%; height: 40px; width: 40px; border-style: solid; border-color:#8854C8; border-width: 1px;"
+                                    align="right">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <br>
+                <br>
+
+                <div class="card mb-3 container hover-up" onclick="location.href='blogs.html';"
+                    style="background-color: black; max-width: 500px; padding: 0px; border-radius: 1vw; border-color: #8854C8; cursor: pointer;">
+                    <img src="assets/machinelearning.jpg"
+                        style="max-width: 500px; max-height: 300px; border-top-left-radius: 1vw; border-top-right-radius: 1vw;"
+                        class="card-img-top" alt="Data Science">
+                    <div class="card-body">
+                        <br>
+                        <h5 class="card-title" style="font-size: 20px; color: #8854C8; font-weight: 700;">Triton:
+                            Open-Source GPU
+                            Programming for Neural Networks</h5>
+                        <hr style="background-color:#8854C8; height: 0.1px; width: 70%; opacity: 100%;">
+                        <p class="card-text" style="font-size: 14px;">We’re releasing Triton 1.0, an open-source
+                            Python-like programming language which enables researchers with no CUDA experience
+                            to write highly efficient GPU code—most of the time on par with what an expert would
+                            be able to produce.
+                        </p>
+                        <div class="row">
+                            <div class="col-6">
+                                <p class="card-text" style="margin-top: 5%;"><small class="text-muted">Last updated 1
+                                        month
+                                        ago</small></p>
+                            </div>
+                            <div class="col-5" style="margin-top: 1%;">
+                                <p align="right" class="text-muted" style="margin-right: 20px;">Prathamesh Shirsat<br>
+                                    Co
+                                    EIC Cozine</p>
+
+                            </div>
+                            <div class="col-1">
+                                <img src="assets/prathamesh.png"
                                     style="border-radius: 50%; height: 40px; width: 40px; border-style: solid; border-color:#8854C8; border-width: 1px;"
                                     align="right">
                             </div>
@@ -847,7 +912,7 @@
             <div style="height: 200px;"></div>
 
             <!--Cozine-->
-            <h1 style="font-size: 10.033vw; text-align: center;"><i class="fas fa-book-open" style="color:#8854C8"></i>
+            <!-- <h1 style="font-size: 10.033vw; text-align: center;"><i class="fas fa-book-open" style="color:#8854C8"></i>
                 Cozine
                 2021</h1>
             <hr>
@@ -861,11 +926,12 @@
 
             </div>
 
-            <div style="height: 300px;"></div>
+            <div style="height: 300px;"></div> -->
 
             <!--Footer-->
             <div class="container-fluid">
-                <h1 style="font-size: 5vw; text-align: center;"><i class="fas fa-phone-alt" style="color:#8854C8"></i>
+                <h1 style="font-size: 10.033vw; text-align: center;"><i class="fas fa-phone-alt"
+                        style="color:#8854C8"></i>
                     Contact
                     us</h1>
                 <div style="height: 100px;"></div>
@@ -900,19 +966,27 @@
                 <div class="row">
                     <div class="col-5">
                         <div class="row">
-                            <div class="col-6">
+                            <!-- <div class="col-6">
                                 <a href="https://kaustubh0204.github.io/Decrypt/"><img src="assets/decrypt-logo.png"
                                         class="img-fluid"></a>
-                            </div>
+                            </div> -->
+                            <div class="col-2">
 
-                            <div class="col-6">
-                                <a href="http://www.csirait.com"><img src="assets/csi-logo.png" class="img-fluid"></a>
                             </div>
+                            <div class="col-9">
+                                <a href="http://www.csirait.com"><img src="assets/csi-logo.png" class="img-fluid" style="height: 150px; width: 150px"></a>
+
+                            </div>
+                            <div class="col-1">
+
+                            </div>
+                            <!-- <div class="col-6"> -->
+                            <!-- </div> -->
 
                         </div>
                     </div>
                     <div class="col-2">
-                        <div style="height: 150px; border-left: 2px solid #8854C8; margin-left: 25px;">
+                        <div style="height: 180px; border-left: 2px solid #8854C8; margin-left: 25px;">
 
                         </div>
                     </div>
@@ -937,6 +1011,9 @@
                             <a style="text-decoration: none; font-size: 20px;"
                                 href="https://www.facebook.com/csirait.official/" target="_blank" class="socialmedia"><i
                                     class="fab fa-facebook"></i> &nbspFacebook</a><br><br>
+                            <a style="text-decoration: none; font-size: 20px;"
+                                href="https://www.facebook.com/csirait.official/" target="_blank" class="socialmedia"><i
+                                    class="fab fa-discord"></i> &nbspDiscord</a><br><br>
 
 
 
